# allesfast

./: .gitignore  LICENSE  README.md  __init__.py  basement.py  benchmark_rm.py  computer.py  config.py  demcpt.py  deriver.py  general_output.py  mcmc.py  mcmc_output.py  nested_sampling.py  nested_sampling_output.py  observables.py  prepare_ttv_fit.py  profile_lnlike.py  pyproject.toml  setup.py  spots.py  statistics.py
Benchmarks&Verifications/dt/: PLAN.md  REPORT.md  bench_dt.py  bench_dt_idl.pro  bench_dt_report.txt  bench_dt_results.csv
allesfast/: GUI.ipynb  __init__.py  basement.py  computer.py  deriver.py  general_output.py  kepler.py  lightcurves.py
allesfast/detection/: example.py
allesfast/dt/: __init__.py  core.py  geometry.py  io.py  plotting.py
allesfast/mcmc/: demcpt.py  mcmc.py  mcmc_output.py
allesfast/nestedsampling/: nested_sampling.py
allesfast/plotting/: __init__.py  plot_top_down_view.py
allesfast/postprocessing/: plot_viol.py
allesfast/priors/: estimate_noise_wrap.py
allesfast/rm_models/: Hirano2011.py  __init__.py
allesfast/star/: __init__.py  diagnostics.py  massradius_mist.py  mist_sed.py  models.py  stellar_params.py  torres.py
allesfast/utils/: mkticsed.py  plot_publication.py  priors2allesfitter.py  settings2allesfitter.py
detection/: injection_recovery.py  periodicity.py  transit_search.py
mcmc/: demcpt.py  mcmc.py  mcmc_output.py
nestedsampling/: nested_sampling.py  nested_sampling_output.py
plotting/: plotting.py
postprocessing/: plot_violins.py
priors/: estimate_noise.py
rm_models/: Hirano2011.py  Hirano2011_backup.py
star/: __init__.py  broadening.py  diagnostics.py  massradius_mist.py  mist_sed.py  mist_utils.py  models.py  sed_utils.py  stellar_params.py
tests/: test_age_derived.py  test_coupled_tolerance.py  test_idl_comparison.py  test_rm_beta_ip.py  test_ttv_prior.py
utils/: file_naming.py  mkprior2.py  priors2allesfitter.py  quadld.py  settings2allesfitter.py
v0/: generative_models.py
v2/: defaults.py  plotter.py  translator.py
(+63 files in other folders)
