[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "allesfast"
version = "0.0.1"
description = "Allesfitter x EXOFASTv2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "matplotlib>=3.8.3",
    "astropy>=6.0.0",
    "seaborn>=0.13.2",
    "emcee>=3.1.6",
    "dynesty>=2.1.3",
    "pytransit>=2.6.5",
    "radvel>=1.5.6",
    "celerite",
    "arviz>=0.17.0",
    "numba>=0.59.0",
    "pandas>=2.2.1",
    "tqdm>=4.66.2",
    "h5py>=3.10.0",
    "requests>=2.31.0",
    "statsmodels>=0.14.1",
    "astroquery>=0.4.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["allesfast*"]
